--- a/.env
+++ b/.env
@@ -9,6 +9,6 @@ DB_PASSWORD=Rameen0123
 DB_NAME=workspace
 SESSION_SECRET=my_super_secret_key
 RAPIDAPI_KEY=6816566342msh5f130eb4dc57d9ap164deejsnde871bc5f61b
-EMAIL_USER=valoarchit@gmail.com
-EMAIL_PASS=vvvwxjtyactouvre
+EMAIL_USER=architcode39@gmail.com
+EMAIL_PASS=btnh mbse ximb yxgs
 BASE_CLIENT_URL=http://localhost:5173
